tests/snapshots/files__eliminate_gamma-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 1;
  print c0_;
  ret;
}
