tests/snapshots/files__eliminate_gamma-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.b0_:
  c1_: int = const 1;
  print c1_;
  ret;
}
