tests/snapshots/files__eliminate_gamma-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: bool = const true;
  c2_: int = const 1;
  print c2_;
  ret;
  ret;
}
