tests/snapshots/files__eliminate_gamma-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v0: int = const 1;
  print v0;
}

