tests/snapshots/files__eliminate_gamma-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 a: int = const 1;
 b: int = const 2;
 condition: bool = lt a b;
 if condition:
  thenval: int = const 1;
  print thenval;
 else:
  elseval: int = const 2;
  print elseval;

return
}
