tests/snapshots/files__eliminate_gamma_interval-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 10;
  v2_: bool = lt v0 c1_;
  c3_: int = const 5;
  c4_: int = const 3;
  v5_: int = id c4_;
  v6_: int = id c1_;
  br v2_ .b7_ .b8_;
.b7_:
  c9_: int = const 2;
  v10_: int = add c3_ c9_;
  v5_: int = id v10_;
  v6_: int = id c1_;
  v11_: bool = lt c1_ v5_;
  print v11_;
  ret;
  jmp .b12_;
.b8_:
  v11_: bool = lt c1_ v5_;
  print v11_;
  ret;
.b12_:
}
