tests/snapshots/files__eliminate_gamma_interval-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
.b1_:
  c2_: bool = const false;
  print c2_;
  ret;
}
