tests/snapshots/files__eliminate_gamma_interval-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="arg 0"];
v1 [label="int"];
v2 [label="lt"];
v3 [label="arg 1"];
v4 [label="arg 1"];
v5 [label="int"];
v6 [label="int"];
v7 [label="int"];
v8 [label="Φ"];
v9 [label="Φ"];
v10 [label="Φ"];
v11 [label="lt"];
v12 [label="int"];
v13 [label="PRINT"];
v14 [label="int"];
v15 [label="PRINT"];
v16 [label="Φ"];
v2 -> v0;
v2 -> v1;
v8 -> v2;
v8 -> v3;
v8 -> v4;
v9 -> v2;
v9 -> v5;
v9 -> v6;
v10 -> v2;
v10 -> v7;
v10 -> v7;
v11 -> v9;
v11 -> v10;
v13 -> v12;
v13 -> v8;
v15 -> v14;
v15 -> v8;
v16 -> v11;
v16 -> v13;
v16 -> v15;
}
}

